# regan

./: CMakeLists.txt  README.md  main-cli.cpp  vcpkg-configuration.json  vcpkg.json
accessory/: commands_fabric.cpp  commands_fabric.hpp
commands/: CMakeLists.txt  commands_base.hpp
commands/cmds/: analyser.cpp  analyser.hpp  monitor.hpp
commands/cmds/storage/: storage.cpp
drv-comm-svc/: CMakeLists.txt  service.cpp  service.hpp
install/: CMakeLists.txt
srv-manager/: CMakeLists.txt
storage/: CMakeLists.txt  storage.hpp
svc-logger/: CMakeLists.txt  config.h
svc-logger/exceptions/: LogException.cpp
svc-logger/logger/: log-msg.cpp  logger.cpp  logger.h
svc-logger/net/: IPAddress.cpp  IPAddress.h
svc-logger/utils/: utils.cpp  utils.h
svc-logger/utils/system-info/: system-info.cpp
svc-manager/: CMakeLists.txt  svc-manager.cpp  svc-manager.hpp
