cmake_minimum_required(VERSION 3.15)

set(SVC_MANAGER_TARGET_NAME svc-manager)
project(SVC_MANAGER_TARGET_NAME)

set(SVC_MANAGER_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR})

set(SVC_MANAGER_HEADERS)

set(SVC_MANAGER_SOURCES)

#add_library(${SVC_MANAGER_TARGET_NAME} STATIC ${SVC_MANAGER_HEADERS} ${SVC_MANAGER_SOURCES})

#target_include_directories()

#target_link_libraries()